--- a/app/src/main/res/layout/activity_contact_info.xml
+++ b/app/src/main/res/layout/activity_contact_info.xml
@@ -65,6 +65,7 @@
         android:layout_marginLeft="18dp"
         android:layout_marginTop="37dp"
         android:text="Save Contact"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintStart_toStartOf="@+id/userEmail"
         app:layout_constraintTop_toBottomOf="@+id/userEmail" />
 
